<resources>
    <string name="app_name">School App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Staff/Teacher Login</string>
    <string name="action_sign_in_parent">Parent Login</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="str_home_fragment">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_homework_description">Description</string>
    <string name="str_coming_soon">Coming Soon</string>
    <string name="str_fee_message">Fee remainder message will recieve on your fee submission</string>
    <string name="str_enter_application">Enter your application for class teacher.</string>
    <string name="str_submit_menu">Save</string>

    <string name="str_timelineDescription">Congratulations of all student of cultural dept. for wining 1st prize in state level Dance Competition.</string>
    <string name="str_select_photo">Select Photo</string>
    <string name="str_add_event_timeline">Add Timeline Post</string>
    <string name="str_enter_event_description">Enter description of event.</string>
    <string name="str_enter_event_date">Date (DD-MM-YYYY)</string>
    <string name="str_homework_class">Class</string>
    <string name="str_homework_division">Division</string>
    <string name="str_add_homework">Add Homework</string>
    <string name="str_only_for_student_alert">Only for student</string>
    <string name="str_montly_report_student_alert">We have web site for fill the monthly report.</string>
    <string name="str_notice_roll_number">Roll Number</string>
    <string name="str_add_notice">Add Notice</string>
    <string name="str_homework_subject">Subject</string>
    <string name="loading_message_str">Please wait ...</string>
    <string name="action_logout">Logout</string>
    <string name="str_add_notice_here">Please add Notice Here !!</string>
</resources>
