<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.schoolapp.activity.AddHomeworkActivity">

    <include layout="@layout/main_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/notice_class_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone">

            <EditText
                android:id="@+id/notice_class_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/floating_edit_text_bg"
                android:focusable="false"
                android:hint="@string/str_homework_class"
                android:inputType="text"
                android:padding="@dimen/_8sdp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/notice_division_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:visibility="gone">

            <EditText
                android:id="@+id/notice_division_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/floating_edit_text_bg"
                android:focusable="false"
                android:hint="@string/str_homework_division"
                android:inputType="text"
                android:padding="@dimen/_8sdp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/notice_roll_number_text_input_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:visibility="gone">

            <EditText
                android:id="@+id/notice_roll_number_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/floating_edit_text_bg"
                android:focusable="false"
                android:hint="@string/str_notice_roll_number"
                android:inputType="number"
                android:padding="@dimen/_8sdp" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <EditText
                android:id="@+id/notice_description_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/floating_edit_text_bg"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/str_homework_description"
                android:inputType="textMultiLine"
                android:lines="5"
                android:padding="@dimen/_10sdp" />

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</LinearLayout>
