<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.schoolapp.activity.AddTimelineActivity">

    <include layout="@layout/main_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/idDateTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/idEventDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/floating_edit_text_bg"
                android:focusable="false"
                android:hint="@string/str_enter_event_date"
                android:padding="@dimen/_8sdp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/idTilEventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <EditText
                android:id="@+id/idEventTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/floating_edit_text_bg"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/str_enter_event_description"
                android:inputType="textMultiLine"
                android:lines="5"
                android:padding="@dimen/_10sdp" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/idSelectMediaBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:padding="@dimen/_15sdp"
            android:text="@string/str_select_photo"
            android:textAllCaps="false" />

       <!-- <ImageView
            android:id="@+id/idSelectedMediaImgView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:scaleType="fitXY" />-->

        <com.master.glideimageview.GlideImageView
            android:id="@+id/idSelectedMediaImgView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_165sdp"
            android:scaleType="fitXY"
            android:layout_marginTop="@dimen/_10sdp"
            app:error_res="@drawable/no_image"
            app:show_progress="false" />
    </LinearLayout>


</LinearLayout>
